# avito_hw

./: converter.py  pyproject.toml
ads/: admin.py  custom_permissions.py  filter_class.py  models.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_image.py  0002_category.py  0002_initial.py  0003_alter_ad_image.py  0003_rename_ads_ad.py  0004_alter_ad_author.py  0004_alter_ad_is_published.py  0005_alter_ad_author.py  0005_alter_ad_is_published.py  0006_alter_ad_is_published.py  0007_alter_ad_id_alter_ad_price_alter_category_id.py  0008_alter_category_name.py
ads/serializers/: ad.py  category.py  validators.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py
authentication/: 1.py  2.py  admin.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
authentication/models/: location.py  user.py
authentication/serializers/: location.py
authentication/urls/: location.py  user.py
avito/: settings.py  urls.py
fixtures/: ads.json  categories.json  category.json  converter.py  location.json  user.json
selection/: custom_permissions.py  models.py  permissions.py  serializers.py  urls.py  views.py
selection/migrations/: 0001_initial.py  0002_alter_selection_items.py  0002_initial.py  0003_alter_selection_items.py  0004_remove_selection_items_selection_items.py  0005_alter_selection_name.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: create_ad_test.py  (+4 more)
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
(+15 files in other folders)
